add 3rd library : bootstrap and font-awesome

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title></title>
+    <link rel="stylesheet" href="assets/vendor.css">
+    <link rel="stylesheet" href="assets/bundle.css">
   </head>
   <body>
     <div id="app"></div>
